# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
kaleidoscope/: CMakeLists.txt
kaleidoscope/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test.cpp
